@@ -1,16 +1,15 @@
 package org.eclipse.slm.resource_management.service.rest.location;
 
 import org.eclipse.slm.resource_management.model.resource.Location;
+import org.eclipse.slm.resource_management.model.resource.exceptions.LocationNotFoundException;
 import org.eclipse.slm.resource_management.persistence.api.LocationJpaRepository;
 import io.swagger.v3.oas.annotations.Operation;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
 
@@ -18,48 +17,53 @@ import java.util.*;
 @RequestMapping("/resources/locations")
 public class LocationRestController {
     private final static Logger LOG = LoggerFactory.getLogger(LocationRestController.class);
-    private LocationJpaRepository locationJpaRepository;
 
-    @Autowired
-    public void LocationRestController(LocationJpaRepository locationJpaRepository) {
-        this.locationJpaRepository = locationJpaRepository;
+    private final LocationHandler locationHandler;
+
+    public LocationRestController(LocationHandler locationHandler) {
+        this.locationHandler = locationHandler;
     }
 
     @RequestMapping(value = "", method = RequestMethod.GET)
     @Operation(summary = "Get locations")
     public List<Location> getLocations(
             @RequestParam(name = "id", required = false)    Optional<UUID> id
-    ) {
+    ) throws LocationNotFoundException {
         if(id.isPresent()) {
-            Optional<Location> optionalLocation = locationJpaRepository.findById(id.get());
-            return Arrays.asList(optionalLocation.get());
+            return List.of(locationHandler.getLocationById(id.get()));
         } else
-            return locationJpaRepository.findAll();
+            return locationHandler.getLocations();
     }
 
     @RequestMapping(value = "", method = RequestMethod.POST)
-    @Operation(summary = "Create new Location")
-    public ResponseEntity addLocation(
-            @RequestParam(name = "id", required = false)    Optional<UUID> optionalId,
+    @Operation(summary = "Add new Location")
+    public ResponseEntity<Location> addLocation(
             @RequestParam(name = "name", required = true)   String name
     ){
-        Location location;
-        if(optionalId.isEmpty())
-            location = new Location(name);
-        else
-            location = new Location(optionalId.get(), name);
+        var locationToAdd = new Location(name);
+        var addedLocation = this.locationHandler.addLocation(locationToAdd);
 
-        locationJpaRepository.save(location);
+        return new ResponseEntity<>(addedLocation, HttpStatus.CREATED);
+    }
 
-        return ResponseEntity.created(null).build();
+    @RequestMapping(value = "/{locationId}", method = RequestMethod.PUT)
+    @Operation(summary = "Add new Location with id")
+    public ResponseEntity<Location> addLocation(
+            @PathVariable(name = "locationId")  UUID locationId,
+            @RequestParam(name = "name")        String name
+    ){
+        var locationToAdd = new Location(locationId, name);
+        var addedLocation = this.locationHandler.addLocation(locationToAdd);
+
+        return new ResponseEntity<>(addedLocation, HttpStatus.CREATED);
     }
 
     @RequestMapping(value = "", method = RequestMethod.DELETE)
     @Operation(summary = "Delete Location")
-    public ResponseEntity<Object> deleteLocation(
+    public ResponseEntity<Void> deleteLocation(
             @RequestParam(name = "id")    UUID id
     ) {
-        locationJpaRepository.deleteById(id);
+        this.locationHandler.deleteLocation(id);
 
         return ResponseEntity.ok().build();
     }
